Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignBooleanObject.quorum
class Main
    action Main
        Object v
        boolean t = true
        v = cast(Object, t)
        Test(v)
    end

    action Test(boolean var)
        if var = true
            output "passed"
        end
    end
end
