Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObjectBoolean.quorum
class Main
    action Main
        boolean v = true
        Test(v)
    end

    action Test(Object var)
    end
end
